@@ -1,16 +1,18 @@
 use strict;
 use warnings;
 
-use Test::More tests => 2;
+use Test::More tests => 4;
 
 use Routes::Tiny;
 
 my $r = Routes::Tiny->new;
-$r->add_route('/foo');
-$r->add_route('/:foo/:bar');
+$r->add_route('/foo', name => 'text');
+$r->add_route('/:foo/:bar', name => 'route');
 
-my $m = $r->match('foo');
+my $m = $r->match('/foo');
 is_deeply($m->params, {});
+is($r->build_path('text'), '/foo');
 
-$m = $r->match('hello/there');
+$m = $r->match('/hello/there');
 is_deeply($m->params, {foo => 'hello', bar => 'there'});
+is($r->build_path('route', foo => 'hello', bar => 'there'), '/hello/there');
